--- a/AI Chat.html
+++ b/AI Chat.html
@@ -73,27 +73,26 @@
                   <button class="btn-reject" onclick="rejectPolicy()">Reject</button>
                 </div>
               </div>
-              <div class="message-time">Just now</div>
+              <div class="message-time"></div>
             </div>
           </div>
         </div>
 
         <div class="chat-input-container">
           <div class="chat-input-wrapper">
-            <button class="btn-icon" onclick="document.getElementById('fileUpload').click()" title="Attach file">
-              📎
+            <button class="btn-icon" onclick="document.getElementById('fileUpload').click()" title="Upload File">
+              <img src="upload.png" alt="Upload File" width="20" />
             </button>
             <input type="file" id="fileUpload" style="display: none;" onchange="handleFileUpload(event)" multiple />
-
             <button class="btn-icon" onclick="openKnowledgeBaseModal()" title="Select Knowledge Bases">
-              📚
+              <img src="book.png" alt="Select Knowledge Bases" width="20" />
             </button>
 
             <textarea id="messageInput" class="message-input" placeholder="Type a message..." rows="1"
               onkeydown="handleKeyDown(event)"></textarea>
 
             <button class="btn-send" onclick="sendMessage()" title="Send message">
-              ➤
+              <img src="send.png" alt="Send" width="20" />
             </button>
           </div>
 
