--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link rel="stylesheet" href="./styles.css" />
   <link rel="stylesheet" href="./dark-mode.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
-</head>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
+</head> 
 <section class="logo">
   <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()">
     <span class="menu-toggle-icon"><img src="menu.png" style="width: 15px; height: auto;" /></span>
