--- a/ocr.html
+++ b/ocr.html
@@ -15,33 +15,33 @@
 </head>
 <section class="logo">
     <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()">
-        <span class="menu-toggle-icon"><img src="menu.png" style="width: 15px; height: auto;" /></span>
+        <span class="menu-toggle-icon"><img src="assets/menu.png" style="width: 15px; height: auto;" /></span>
     </button>
-    <a href="index.html" style="cursor: pointer;"><img src="Ricoh_Logo.png" alt="Ricoh Logo" /></a>
+    <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.png" alt="Ricoh Logo" /></a>
 </section>
 
 <body>
     <header class="header" id="mainHeader">
         <nav class="nav-menu">
             <button class="nav-btn" onclick="window.location.href='index.html'" data-tooltip="Dashboard"><img
-                    src="dashboard.png" alt="Dashboard" width="30" /></button>
+                    src="assets/dashboard.png" alt="Dashboard" width="30" /></button>
             </button>
             <button class="nav-btn" onclick="window.location.href='Knowledge_Bases.html'"
-                data-tooltip="Knowledge Bases"><img src="book.png" alt="Knowledge Bases" width="30" /></button>
+                data-tooltip="Knowledge Bases"><img src="assets/book.png" alt="Knowledge Bases" width="30" /></button>
             <button class="nav-btn" onclick="window.location.href='AI Chat.html'" data-tooltip="AI Chat"><img
-                    src="chatbot.png" alt="AI Chat" width="30" /></button>
-            <button class="nav-btn" onclick="window.location.href='ocr.html'" data-tooltip="OCR"><img src="ocr.png"
+                    src="assets/chatbot.png" alt="AI Chat" width="30" /></button>
+            <button class="nav-btn" onclick="window.location.href='ocr.html'" data-tooltip="OCR"><img src="assets/ocr.png"
                     alt="OCR" width="30" /></button>
-            <button class="nav-btn" data-tooltip="Configuration"><img src="setting.png" alt="Configuration"
+            <button class="nav-btn" data-tooltip="Configuration"><img src="assets/setting.png" alt="Configuration"
                     width="30" /></button>
-            <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Report"><img src="report.png"
+            <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Report"><img src="assets/report.png"
                     alt="Report" width="30" /></button>
         </nav>
         <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()"
             data-tooltip="Toggle Light / Dark Mode">
             <span class="theme-icon">🌙</span>
         </button>
-        <div class="user-menu" data-tooltip="Profile"><img src="user.png" alt="User Profile" width="30" /></div>
+        <div class="user-menu" data-tooltip="Profile"><img src="assets/user.png" alt="User Profile" width="30" /></div>
         <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Logout">Logout</button>
         </button>
     </header>
