--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           alt="Report" width="30" /></button>
     </nav>
     <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()" data-tooltip="Toggle Light / Dark Mode">
-      <span class="theme-icon">🌙</span>
+      <span class="theme-icon"><img src="assets/crescent-moon.png" alt="Toggle Light / Dark Mode" width="20" /></span>
     </button>
     <div class="user-menu" data-tooltip="Profile"><img src="assets/user.png" alt="User Profile" width="30" /></div>
     <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Logout">Logout</button>
@@ -405,6 +405,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/30/2025 4:50 PM</td>
                 <td>Test Account</td>
+                <td>$55,125.10</td>
+                <td>Low</td>
+                <td>IT</td>
+                <td>11/25/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -417,6 +421,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/28/2025 11:30 AM</td>
                 <td>Test Account</td>
+                <td>$14,510.60</td>
+                <td>High</td>
+                <td>Sales</td>
+                <td>11/11/2025</td>
               </tr>
               <tr>
                 <td>Security Audit</td>
@@ -430,6 +438,10 @@
                 <td>Obtain Rule Engi...</td>
                 <td>10/25/2025 1:45 PM</td>
                 <td>Test Account</td>
+                <td>$26,752.60</td>
+                <td>Medium</td>
+                <td>Finance</td>
+                <td>11/29/2025</td>
               </tr>
               <tr>
                 <td>Marketing Campaign</td>
@@ -443,6 +455,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/22/2025 3:15 PM</td>
                 <td>Test Account</td>
+                <td>$9,180.20</td>
+                <td>High</td>
+                <td>Sales</td>
+                <td>10/30/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -456,6 +472,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/20/2025 5:00 PM</td>
                 <td>Test Account</td>
+                <td>$42,350.80</td>
+                <td>Medium</td>
+                <td>Operations</td>
+                <td>11/15/2025</td>
               </tr>
               <tr>
                 <td>Contract Review</td>
@@ -469,6 +489,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/18/2025 10:40 AM</td>
                 <td>Test Account</td>
+                <td>$78,920.50</td>
+                <td>High</td>
+                <td>Operations</td>
+                <td>11/10/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -482,6 +506,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/15/2025 2:30 PM</td>
                 <td>Test Account</td>
+                <td>$125,640.00</td>
+                <td>High</td>
+                <td>Finance</td>
+                <td>11/05/2025</td>
               </tr>
               <tr>
                 <td>Training Program</td>
@@ -495,6 +523,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/12/2025 4:20 PM</td>
                 <td>Test Account</td>
+                <td>$18,750.00</td>
+                <td>Low</td>
+                <td>HR</td>
+                <td>11/01/2025</td>
               </tr>
               <tr>
                 <td>Security Audit</td>
@@ -508,6 +540,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/10/2025 11:45 AM</td>
                 <td>Test Account</td>
+                <td>$215,480.00</td>
+                <td>High</td>
+                <td>IT</td>
+                <td>11/20/2025</td>
               </tr>
               <tr>
                 <td>Marketing Campaign</td>
@@ -521,6 +557,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/8/2025 1:10 PM</td>
                 <td>Test Account</td>
+                <td>$52,300.00</td>
+                <td>Medium</td>
+                <td>Marketing</td>
+                <td>10/28/2025</td>
               </tr>
               <tr>
                 <td>Sales Report</td>
@@ -534,6 +574,10 @@
                 <td>Obtain Rule Engi...</td>
                 <td>10/5/2025 3:30 PM</td>
                 <td>Test Account</td>
+                <td>$68,450.00</td>
+                <td>High</td>
+                <td>Sales</td>
+                <td>10/25/2025</td>
               </tr>
               <tr>
                 <td>Training Program</td>
@@ -547,6 +591,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/2/2025 5:15 PM</td>
                 <td>Test Account</td>
+                <td>$31,200.00</td>
+                <td>Medium</td>
+                <td>HR</td>
+                <td>10/22/2025</td>
               </tr>
               <tr>
                 <td>Budget Review</td>
@@ -560,6 +608,10 @@
                 <td>Virtual Instant C...</td>
                 <td>9/30/2025 2:45 PM</td>
                 <td>Test Account</td>
+                <td>$185,900.00</td>
+                <td>High</td>
+                <td>Finance</td>
+                <td>10/15/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -571,6 +623,10 @@
                 <td>Obtain Rule Engi...</td>
                 <td>11/3/2025 11:54 AM</td>
                 <td>Test Account</td>
+                <td>$95,500.00</td>
+                <td>Medium</td>
+                <td>Finance</td>
+                <td>11/23/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -583,6 +639,10 @@
                 <td>Virtual Instant C...</td>
                 <td>11/16/2025 12:01 PM</td>
                 <td>Test Account</td>
+                <td>$25,800.00</td>
+                <td>Low</td>
+                <td>Finance</td>
+                <td>12/05/2025</td>
               </tr>
               <tr>
                 <td>Budget Review</td>
@@ -596,6 +656,10 @@
                 <td>Virtual Instant C...</td>
                 <td>10/13/2025 4:06 PM</td>
                 <td>Test Account</td>
+                <td>$320,150.00</td>
+                <td>High</td>
+                <td>Finance</td>
+                <td>11/02/2025</td>
               </tr>
               <tr>
                 <td>Infrastructure Upgrade</td>
@@ -609,6 +673,10 @@
                 <td>Virtual Instant C...</td>
                 <td>8/1/2025 12:07 PM</td>
                 <td>Test Account</td>
+                <td>$450,000.00</td>
+                <td>High</td>
+                <td>IT</td>
+                <td>09/15/2025</td>
               </tr>
               <tr>
                 <td>Contract Review</td>
@@ -622,6 +690,10 @@
                 <td>Virtual Instant C...</td>
                 <td>11/15/2025 2:00 PM</td>
                 <td>Test Account</td>
+                <td>$88,200.00</td>
+                <td>Medium</td>
+                <td>Legal</td>
+                <td>12/10/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -635,6 +707,10 @@
                 <td>Obtain Rule Engi...</td>
                 <td>8/21/2025 9:24 PM</td>
                 <td>Test Account</td>
+                <td>$62,450.00</td>
+                <td>Low</td>
+                <td>Finance</td>
+                <td>09/10/2025</td>
               </tr>
               <tr>
                 <td>Card / Loan Application</td>
@@ -648,6 +724,10 @@
                 <td>Virtual Instant C...</td>
                 <td>7/17/2025 11:22 PM</td>
                 <td>Test Account</td>
+                <td>$175,300.00</td>
+                <td>High</td>
+                <td>Finance</td>
+                <td>08/30/2025</td>
               </tr>
             </tbody>
           </table>
@@ -679,7 +759,7 @@
 
   <div class="chart-modal" id="chartModal">
     <div class="modal-content">
-      <button class="modal-close" id="modalClose">×</button>
+      <button class="modal-close" id="modalClose"><img src="assets/close.png" alt="Close" width="15"></button>
       <h2 class="modal-chart-title" id="modalChartTitle"></h2>
       <div class="modal-chart-wrap" id="modalChartWrap"></div>
     </div>
