--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="./styles.css" />
   <link rel="stylesheet" href="./dark-mode.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
 </head>
 <section class="logo">
   <button class="menu-toggle-btn" id="menuToggleBtn" onclick="toggleMenu()">
@@ -28,8 +27,8 @@
           src="assets/book.png" alt="Knowledge Bases" width="30" /></button>
       <button class="nav-btn" onclick="window.location.href='AI Chat.html'" data-tooltip="AI Chat"><img
           src="assets/chatbot.png" alt="AI Chat" width="30" /></button>
-      <button class="nav-btn" onclick="window.location.href='ocr.html'" data-tooltip="OCR"><img src="assets/ocr.png"
-          alt="OCR" width="30" /></button>
+      <!-- <button class="nav-btn" onclick="window.location.href='ocr.html'" data-tooltip="OCR"><img src="assets/ocr.png"
+          alt="OCR" width="30" /></button> -->
       <button class="nav-btn" data-tooltip="Configuration"><img src="assets/setting.png" alt="Configuration"
           width="30" /></button>
       <button class="nav-btn" onclick="window.location.href='#'" data-tooltip="Report"><img src="assets/file.png"
