--- a/AI Chat.html
+++ b/AI Chat.html
@@ -12,42 +12,42 @@
 
 <body>
   <section class="logo">
-    <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.png" alt="Ricoh Logo" /></a>
+    <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.svg" alt="Ricoh Logo" /></a>
   </section>
   
   <header class="header" id="mainHeader">
       <nav class="nav-menu">
         <button class="nav-btn" onclick="window.location.href='index.html'">
-          <img src="assets/dashboard.png" alt="Dashboard" width="30" />
+          <img src="assets/dashboard-svgrepo-com.svg" alt="Dashboard" width="30" />
           <span class="nav-text">Dashboard</span>
         </button>
         <button class="nav-btn" onclick="window.location.href='Knowledge_Bases.html'">
-          <img src="assets/book.png" alt="Knowledge Bases" width="30" />
+          <img src="assets/literature-book-knowledge-library-svgrepo-com.svg" alt="Knowledge Bases" width="30" />
           <span class="nav-text">Knowledge Bases</span>
         </button>
         <button class="nav-btn" onclick="window.location.href='AI Chat.html'">
-          <img src="assets/chatbot.png" alt="AI Chat" width="30" />
+          <img src="assets/chat-text-fill-svgrepo-com.svg" alt="AI Chat" width="30" />
           <span class="nav-text">AI Chat</span>
         </button>
         <button class="nav-btn">
-          <img src="assets/setting.png" alt="Configuration" width="30" />
+          <img src="assets/setting-svgrepo-com.svg" alt="Configuration" width="30" />
           <span class="nav-text">Configuration</span>
         </button>
         <button class="nav-btn" onclick="window.location.href='#'">
-          <img src="assets/file.png" alt="Report" width="30" />
+          <img src="assets/article-story-report-piece-svgrepo-com.svg" alt="Report" width="30" />
           <span class="nav-text">Report</span>
         </button>
       </nav>
       <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()">
-        <span class="theme-icon"><img src="assets/crescent-moon.png" alt="Toggle Theme" width="20" /></span>
+        <span class="theme-icon"><img src="assets/moon-night-svgrepo-com.svg" alt="Toggle Theme" width="20" /></span>
         <span class="nav-text">Toggle Theme</span>
       </button>
       <div class="user-menu">
-        <img src="assets/user.png" alt="User Profile" width="30" />
+        <img src="assets/user-svgrepo-com.svg" alt="User Profile" width="30" />
         <span class="nav-text">Profile</span>
       </div>
       <button class="nav-btn" onclick="window.location.href='#'">
-        <img src="assets/book.png" alt="Logout" width="30" />
+        <img src="assets/logout-svgrepo-com.svg" alt="Logout" width="30" />
         <span class="nav-text">Logout</span>
       </button>
     </header>
@@ -64,7 +64,7 @@
         </div>
         <div class="chat-messages" id="chatMessages">
           <div class="message assistant-message">
-            <div class="message-avatar">🤖</div>
+            <div class="message-avatar"><img src="assets/bot-svgrepo-com.svg" alt="Assistant" width="30" /></div>
             <div class="message-content">
               <div class="message-text">
                 <p>Good to see you here.</p>
@@ -88,18 +88,18 @@
         <div class="chat-input-container">
           <div class="chat-input-wrapper">
             <button class="btn-icon" onclick="document.getElementById('fileUpload').click()" title="Upload File">
-              <img src="assets/upload.png" alt="Upload File" width="20" />
+              <img src="assets/upload-svgrepo-com.svg" alt="Upload File" width="20" />
             </button>
             <input type="file" id="fileUpload" style="display: none;" onchange="handleFileUpload(event)" multiple />
             <button class="btn-icon" onclick="openKnowledgeBaseModal()" title="Select Knowledge Bases">
-              <img src="assets/book.png" alt="Select Knowledge Bases" width="20" />
+              <img src="assets/literature-book-knowledge-library-svgrepo-com.svg" alt="Select Knowledge Bases" width="20" />
             </button>
 
             <textarea id="messageInput" class="message-input" placeholder="Type a message..." rows="1"
               onkeydown="handleKeyDown(event)"></textarea>
 
             <button class="btn-send" onclick="sendMessage()" title="Send message">
-              <img src="assets/send.png" alt="Send" width="20" />
+              <img src="assets/send-svgrepo-com.svg" alt="Send" width="25" />
             </button>
           </div>
 
