--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -12,41 +12,41 @@
 
 <body>
   <section class="logo">
-    <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.png" alt="Ricoh Logo" /></a>
+    <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.svg" alt="Ricoh Logo" /></a>
   </section>
   <header class="header" id="mainHeader">
     <nav class="nav-menu">
       <button class="nav-btn" onclick="window.location.href='index.html'">
-        <img src="assets/dashboard.png" alt="Dashboard" width="30" />
+        <img src="assets/dashboard-svgrepo-com.svg" alt="Dashboard" width="30" />
         <span class="nav-text">Dashboard</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='Knowledge_Bases.html'">
-        <img src="assets/book.png" alt="Knowledge Bases" width="30" />
+        <img src="assets/literature-book-knowledge-library-svgrepo-com.svg" alt="Knowledge Bases" width="30" />
         <span class="nav-text">Knowledge Bases</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='AI Chat.html'">
-        <img src="assets/chatbot.png" alt="AI Chat" width="30" />
+        <img src="assets/chat-text-fill-svgrepo-com.svg" alt="AI Chat" width="30" />
         <span class="nav-text">AI Chat</span>
       </button>
       <button class="nav-btn">
-        <img src="assets/setting.png" alt="Configuration" width="30" />
+        <img src="assets/setting-svgrepo-com.svg" alt="Configuration" width="30" />
         <span class="nav-text">Configuration</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='#'">
-        <img src="assets/file.png" alt="Report" width="30" />
+        <img src="assets/article-story-report-piece-svgrepo-com.svg" alt="Report" width="30" />
         <span class="nav-text">Report</span>
       </button>
     </nav>
     <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()">
-      <span class="theme-icon"><img src="assets/crescent-moon.png" alt="Toggle Theme" width="20" /></span>
+      <span class="theme-icon"><img src="assets/moon-night-svgrepo-com.svg" alt="Toggle Theme" width="20" /></span>
       <span class="nav-text">Toggle Theme</span>
     </button>
     <div class="user-menu">
-      <img src="assets/user.png" alt="User Profile" width="30" />
+      <img src="assets/user-svgrepo-com.svg" alt="User Profile" width="30" />
       <span class="nav-text">Profile</span>
     </div>
     <button class="nav-btn" onclick="window.location.href='#'">
-      <img src="assets/book.png" alt="Logout" width="30" />
+      <img src="assets/logout-svgrepo-com.svg" alt="Logout" width="30" />
       <span class="nav-text">Logout</span>
     </button>
     </button>
