--- a/index.html
+++ b/index.html
@@ -11,43 +11,43 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
 </head>
 <section class="logo">
-  <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.png" alt="Ricoh Logo" /></a>
+  <a href="index.html" style="cursor: pointer;"><img src="assets/Ricoh_Logo.svg" alt="Ricoh Logo" /></a>
 </section>
 
 <body>
   <header class="header" id="mainHeader">
     <nav class="nav-menu">
       <button class="nav-btn" onclick="window.location.href='index.html'">
-        <img src="assets/dashboard.png" alt="Dashboard" width="30" />
+        <img src="assets/dashboard-svgrepo-com.svg" alt="Dashboard" width="30" />
         <span class="nav-text">Dashboard</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='Knowledge_Bases.html'">
-        <img src="assets/book.png" alt="Knowledge Bases" width="30" />
+        <img src="assets/literature-book-knowledge-library-svgrepo-com.svg" alt="Knowledge Bases" width="30" />
         <span class="nav-text">Knowledge Bases</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='AI Chat.html'">
-        <img src="assets/chatbot.png" alt="AI Chat" width="30" />
+        <img src="assets/chat-text-fill-svgrepo-com.svg" alt="AI Chat" width="30" />
         <span class="nav-text">AI Chat</span>
       </button>
       <button class="nav-btn">
-        <img src="assets/setting.png" alt="Configuration" width="30" />
+        <img src="assets/setting-svgrepo-com.svg" alt="Configuration" width="30" />
         <span class="nav-text">Configuration</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='#'">
-        <img src="assets/file.png" alt="Report" width="30" />
+        <img src="assets/article-story-report-piece-svgrepo-com.svg" alt="Report" width="30" />
         <span class="nav-text">Report</span>
       </button>
     </nav>
     <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()">
-      <span class="theme-icon"><img src="assets/crescent-moon.png" alt="Toggle Light / Dark Mode" width="20" /></span>
+      <span class="theme-icon"><img src="assets/moon-night-svgrepo-com.svg" alt="Toggle Light / Dark Mode" width="30" /></span>
       <span class="nav-text">Toggle Theme</span>
     </button>
     <div class="user-menu">
-      <img src="assets/user.png" alt="User Profile" width="30" />
+      <img src="assets/user-svgrepo-com.svg" alt="User Profile" width="30" />
       <span class="nav-text">Profile</span>
     </div>
     <button class="nav-btn" onclick="window.location.href='#'">
-      <img src="assets/book.png" alt="Logout" width="30" />
+      <img src="assets/logout-svgrepo-com.svg" alt="Logout" width="30" />
       <span class="nav-text">Logout</span>
     </button>
   </header>
@@ -86,7 +86,7 @@
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="0">
             </select>
-            <button class="expand-btn" data-chart="chartProcess0" title="Expand"><img src="assets/expand.png"
+            <button class="expand-btn" data-chart="chartProcess0" title="Expand"><img src="assets/maximize-svgrepo-com.svg"
                 alt="Expand" width="20" /></button>
             <h3 id="chartTitle0">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess0"></canvas></div>
@@ -94,7 +94,7 @@
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="1">
             </select>
-            <button class="expand-btn" data-chart="chartProcess1" title="Expand"><img src="assets/expand.png"
+            <button class="expand-btn" data-chart="chartProcess1" title="Expand"><img src="assets/maximize-svgrepo-com.svg  "
                 alt="Expand" width="20" /></button>
             <h3 id="chartTitle1">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess1"></canvas></div>
@@ -102,7 +102,7 @@
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="2">
             </select>
-            <button class="expand-btn" data-chart="chartProcess2" title="Expand"><img src="assets/expand.png"
+            <button class="expand-btn" data-chart="chartProcess2" title="Expand"><img src="assets/maximize-svgrepo-com.svg"
                 alt="Expand" width="20" /></button>
             <h3 id="chartTitle2">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess2"></canvas></div>
@@ -110,7 +110,7 @@
           <div class="chart-card">
             <select class="process-selector-dropdown" data-chart-index="3">
             </select>
-            <button class="expand-btn" data-chart="chartProcess3" title="Expand"><img src="assets/expand.png"
+            <button class="expand-btn" data-chart="chartProcess3" title="Expand"><img src="assets/maximize-svgrepo-com.svg"
                 alt="Expand" width="20" /></button>
             <h3 id="chartTitle3">Loading...</h3>
             <div class="chart-wrap"><canvas id="chartProcess3"></canvas></div>
@@ -118,7 +118,7 @@
         </div>
 
         <div class="line-chart-container">
-          <button class="expand-btn" data-chart="lineChart" title="Expand"><img src="assets/expand.png" alt="Expand"
+          <button class="expand-btn" data-chart="lineChart" title="Expand"><img src="assets/maximize-svgrepo-com.svg" alt="Expand"
               width="20" /></button>
           <h3>Overall Status Trend</h3>
           <div class="line-chart-wrap"><canvas id="lineChart" height="140"></canvas></div>
